YACC and LEX/Grammar_source_file/if_stmt.y
%token   ID  NUM  STRING SHARED PRIVATE INTEGER SEMAPHORE RESTRICT PROGRAM PROCEDURE PROCESS P V ASSERT PRINT WHILE IF THEN ELSE PLUS MINUS TIMES MOD AND OR NOT LE LT EQ GE GT NE ASSIGN LPAREN RPAREN LBRACE RBRACE LBRACKET RBRACKET COMMA SEMICOLON TRUE

%%
stmt: A
       | if_stmt

if_stmt: "if" A "then" stmt
           | "if" A "then" stmt "else" stmt

 A: "identifier"
