YACC and LEX/grammar_output_file/if_stmt.output
Terminals unused in grammar

   ID
   NUM
   STRING
   SHARED
   PRIVATE
   INTEGER
   SEMAPHORE
   RESTRICT
   PROGRAM
   PROCEDURE
   PROCESS
   P
   V
   ASSERT
   PRINT
   WHILE
   IF
   THEN
   ELSE
   PLUS
   MINUS
   TIMES
   MOD
   AND
   OR
   NOT
   LE
   LT
   EQ
   GE
   GT
   NE
   ASSIGN
   LPAREN
   RPAREN
   LBRACE
   RBRACE
   LBRACKET
   RBRACKET
   COMMA
   SEMICOLON
   TRUE


State 9conflicts: 1 shift/reduce


Grammar

    0 $accept: stmt $end

    1 stmt: A
    2     | if_stmt

    3 if_stmt: "if" A "then" stmt
    4        | "if" A "then" stmt "else" stmt

    5 A: "identifier"


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258)
NUM (259)
STRING (260)
SHARED (261)
PRIVATE (262)
INTEGER (263)
SEMAPHORE (264)
RESTRICT (265)
PROGRAM (266)
PROCEDURE (267)
PROCESS (268)
P (269)
V (270)
ASSERT (271)
PRINT (272)
WHILE (273)
IF (274)
THEN (275)
ELSE (276)
PLUS (277)
MINUS (278)
TIMES (279)
MOD (280)
AND (281)
OR (282)
NOT (283)
LE (284)
LT (285)
EQ (286)
GE (287)
GT (288)
NE (289)
ASSIGN (290)
LPAREN (291)
RPAREN (292)
LBRACE (293)
RBRACE (294)
LBRACKET (295)
RBRACKET (296)
COMMA (297)
SEMICOLON (298)
TRUE (299)
"if" (300) 3 4
"then" (301) 3 4
"else" (302) 4
"identifier" (303) 5


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
stmt (50)
    on left: 1 2, on right: 0 3 4
if_stmt (51)
    on left: 3 4, on right: 2
A (52)
    on left: 5, on right: 1 3 4


State 0

    0 $accept: . stmt $end

    "if"          shift, and go to state 1
    "identifier"  shift, and go to state 2

    stmt     go to state 3
    if_stmt  go to state 4
    A        go to state 5


State 1

    3 if_stmt: "if" . A "then" stmt
    4        | "if" . A "then" stmt "else" stmt

    "identifier"  shift, and go to state 2

    A  go to state 6


State 2

    5 A: "identifier" .

    $default  reduce using rule 5 (A)


State 3

    0 $accept: stmt . $end

    $end  shift, and go to state 7


State 4

    2 stmt: if_stmt .

    $default  reduce using rule 2 (stmt)


State 5

    1 stmt: A .

    $default  reduce using rule 1 (stmt)


State 6

    3 if_stmt: "if" A . "then" stmt
    4        | "if" A . "then" stmt "else" stmt

    "then"  shift, and go to state 8


State 7

    0 $accept: stmt $end .

    $default  accept


State 8

    3 if_stmt: "if" A "then" . stmt
    4        | "if" A "then" . stmt "else" stmt

    "if"          shift, and go to state 1
    "identifier"  shift, and go to state 2

    stmt     go to state 9
    if_stmt  go to state 4
    A        go to state 5


State 9

    3 if_stmt: "if" A "then" stmt .
    4        | "if" A "then" stmt . "else" stmt

    "else"  shift, and go to state 10

    "else"    [reduce using rule 3 (if_stmt)]
    $default  reduce using rule 3 (if_stmt)


State 10

    4 if_stmt: "if" A "then" stmt "else" . stmt

    "if"          shift, and go to state 1
    "identifier"  shift, and go to state 2

    stmt     go to state 11
    if_stmt  go to state 4
    A        go to state 5


State 11

    4 if_stmt: "if" A "then" stmt "else" stmt .

    $default  reduce using rule 4 (if_stmt)
